# save-context-search

./: .gitignore  CLAUDE.example.md  CLAUDE.md  Cargo.toml  README.md  build-plugin.sh  coderag-spec.md  skill.md
examples/: debug_sig.rs
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/hooks/: hooks.json  session-start.sh
plugin/skills/scs/: SKILL.md
plugin/skills/scs/references/: commands.md
ref/: README.md
ref/docs_rag/: chunker.rs  embedder.rs  mod.rs  store.rs  watcher.rs
scripts/: poc_summarize.py
src/: lib.rs  main.rs  map.rs
src/embeddings/: mod.rs  openai.rs  query_cache.rs
src/index/: cache.rs  manager.rs  mod.rs
src/parser/: code.rs  docs.rs  mod.rs  queries.rs
src/search/: lookup.rs  mod.rs  semantic.rs
src/summarizer/: gemini.rs  levels.rs  mod.rs
